Add Android Studio 2.4 Preivew2 Link

--- a/index.html
+++ b/index.html
@@ -306,6 +306,43 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.4 Preview2-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3804685-windows.zip">android-studio-ide-171.3804685-windows.zip</a>
+                                </td>
+                                <td>504.9 MB</td>
+                                <td>9c1ded079580a2c2815804940311ae68ab7675235e09a0dec90374ee03dc0dec</td>
+                                <td rowspan="5"><a href="https://ww4.sinaimg.cn/large/006tNbRwgy1fdnemq5o3ij31ax0qn0zs.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3804685-windows32.zip">android-studio-ide-171.3804685-windows32.zip</a>
+                                </td>
+                                <td>504.4 MB</td>
+                                <td>fa4b07da5208f9ff63fe19a725627d36d101766910ff887f2aac8fecf0bad075</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3804685-mac.zip">android-studio-ide-171.3804685-mac.dmg</a>
+                                </td>
+                                <td>504 MB</td>
+                                <td>921090198d09b77ee5aff016c11fdfd39bedef24fee2657f43b645911f658352</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3804685-linux.zip">android-studio-ide-171.3804685-linux.zip</a>
+                                </td>
+                                <td>503.5 MB</td>
+                                <td>35d53375b32d3d85c44fbf7b73412b39c37cc8aae0b8e340269dab56615b17bd</td>
+                            </tr>
                             <!-- 2.4 Preview1-->
                             <tr>
                                 <td rowspan="5">2.4 Preview1</td>
@@ -313,7 +350,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.0/android-studio-ide-171.3804684-windows.zip">android-studio-ide-171.3804684-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.0/android-studio-ide-171.3804685-windows.zip">android-studio-ide-171.3804684-windows.zip</a>
                                 </td>
                                 <td>504.4 MB</td>
                                 <td>ad01e1936b4b96b61bcd1e89e11c826697be579c8cd09ef9c062a5bfaa3a0682</td>
