Add Android studio 2.4 preview3 link

--- a/index.html
+++ b/index.html
@@ -306,6 +306,43 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.4 Preview3-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3829324-windows.zip">android-studio-ide-171.3829324-windows.zip</a>
+                                </td>
+                                <td>508.2 MB</td>
+                                <td>533bf7bac8ff8510f994f15fe55c62b7b1950d445b2a0de7921c853bf7c67119</td>
+                                <td rowspan="5"><a href="http://ww4.sinaimg.cn/large/006tNbRwgy1fe3rbtmsa1j30x10fv0vl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3829324-windows32.zip">android-studio-ide-171.3829324-windows32.zip</a>
+                                </td>
+                                <td>507.7 MB</td>
+                                <td>cb0aa0e03dc091097c4a73e945f9d0291e87bba7582f31aa3b6c44034340d9e2</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3829324-mac.zip">android-studio-ide-171.3829324-mac.dmg</a>
+                                </td>
+                                <td>507.2 MB</td>
+                                <td>4d135ac753e4aec34173f442c91e85167e1505a1c3488998101f276548dc1fd3</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3829324-linux.zip">android-studio-ide-171.3829324-linux.zip</a>
+                                </td>
+                                <td>506.7 MB</td>
+                                <td>72b613106a6961868cdc1914a1ca849af3f9d59c1f8ed7e31c5ef74ddd3fa97f</td>
+                            </tr>
                             <!-- 2.4 Preview2-->
                             <tr>
                                 <td rowspan="5">2.4 Preview2</td>
@@ -313,7 +350,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3804685-windows.zip">android-studio-ide-171.3804685-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.1/android-studio-ide-171.3829324-windows.zip">android-studio-ide-171.3804685-windows.zip</a>
                                 </td>
                                 <td>504.9 MB</td>
                                 <td>9c1ded079580a2c2815804940311ae68ab7675235e09a0dec90374ee03dc0dec</td>
