Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1664,10 +1664,10 @@
                             <tr>
                                 <td>小江</td>
                                 <td>¥15</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>李宁</td>
+                                <td>¥5</td>
+                                <td>逝水流星-MisGray</td>
+                                <td>¥6.66</td>
                                 <td></td>
                                 <td></td>
                             </tr>
