Add code labs link to top banner

--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
                     <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="">去看看</a>
                 </div>
             </li>
+            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;">
+                <div class="inner">
+                    <h1>Code Labs</h1>
+                    <p>各自技术的 Code Labs</p>
+                    <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="">去试试</a>
+                </div>
+            </li>
             <li style="background-image: url(http://ww3.sinaimg.cn/large/006tKfTcgy1fcnsyt9wogj31jk0go409.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Android 7.0 Nougat</h1>
