remove Bugly mirror url

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Code Labs</h1>
-                    <p>各自技术的 Code Labs</p>
+                    <p>各种 Google 技术的 Code Labs</p>
                     <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="">去试试</a>
                 </div>
             </li>
@@ -274,11 +274,6 @@
                             <li>
                                 <p>大连东软信息学院镜像服务器地址: </p>
                                 <p><code>mirrors.neusoft.edu.cn</code> 端口：80</p>
-                            </li>
-                            <li>
-                                <p>腾讯Bugly 镜像: </p>
-                                <p><code>https://dsx.bugly.qq.com/repository/1</code></p>
-                                <p>腾讯镜像使用方法:<a href="https://dsx.bugly.qq.com/repository/1">https://dsx.bugly.qq.com/repository/1</a></p>
                             </li>
                         </ol>
                         <h4><strong>使用方法：</strong></h4>
