Add Android Studio Preview4 and Preview5 link

--- a/index.html
+++ b/index.html
@@ -308,6 +308,80 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.4 Preview5-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.4/android-studio-ide-171.3883974-windows.zip">android-studio-ide-171.3883974-windows.zip</a>
+                                </td>
+                                <td>537.5 MB</td>
+                                <td>0232804328a832eaf5edc1e3fd226b0eedcd2129e9d5ca1777306387b86e8533</td>
+                                <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/006tKfTcgy1fei1gtmjumj31at0gi0vv.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.4/android-studio-ide-171.3883974-windows32.zip">android-studio-ide-171.3883974-windows32.zip</a>
+                                </td>
+                                <td>536.97 MB</td>
+                                <td>d77679c1ffcc76054b10f31ddead2bd0e0dcbbac498e31809885921def9003ff</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.4/android-studio-ide-171.3883974-mac.zip">android-studio-ide-171.3883974-mac.dmg</a>
+                                </td>
+                                <td>536.54 MB</td>
+                                <td>c543f623aa24ace236aba477ccc16a915dfda5c90d1e26d23dc0e98e4a406c08</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.4/android-studio-ide-171.3883974-linux.zip">android-studio-ide-171.3883974-linux.zip</a>
+                                </td>
+                                <td>536.00 MB</td>
+                                <td>7211f6b1110957f6e793b38cc6c16a65627ee4cc5db24f6d6d8d62b44e3575fc</td>
+                            </tr>
+                            <!-- 2.4 Preview4-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.3/android-studio-ide-171.3870562-windows.zip">android-studio-ide-171.3870562-windows.zip</a>
+                                </td>
+                                <td>511.4 MB</td>
+                                <td>e680347b480a97842423883ae1703f859781e03c8ba79ba2302506a41a87ef32</td>
+                                <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/006tKfTcgy1fei19700e4j31980cf414.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.3/android-studio-ide-171.3870562-windows32.zip">android-studio-ide-171.3870562-windows32.zip</a>
+                                </td>
+                                <td>510.9 MB</td>
+                                <td>499fcfc5a4edc63b447658af3bb1ebf24a0d2781ab5289a8ba5091b401c81ed6</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.3/android-studio-ide-171.3870562-mac.zip">android-studio-ide-171.3870562-mac.dmg</a>
+                                </td>
+                                <td>510.5 MB</td>
+                                <td>41adf1d98060f6a87c3187947894140a33920eb094e537a41cfa4285a58c9ac6</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.3/android-studio-ide-171.3870562-linux.zip">android-studio-ide-171.3870562-linux.zip</a>
+                                </td>
+                                <td>510.1 MB</td>
+                                <td>a603fbeca160b528211836ce5c4cedaafa92a7c0c2de99571524dd0c06fab601</td>
+                            </tr>
                             <!-- 2.4 Preview3-->
                             <tr>
                                 <td rowspan="5">2.4 Preview3</td>
@@ -315,7 +389,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3829324-windows.zip">android-studio-ide-171.3829324-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.2/android-studio-ide-171.3870562-windows.zip">android-studio-ide-171.3829324-windows.zip</a>
                                 </td>
                                 <td>508.2 MB</td>
                                 <td>533bf7bac8ff8510f994f15fe55c62b7b1950d445b2a0de7921c853bf7c67119</td>
