--- a/index.html
+++ b/index.html
@@ -181,46 +181,53 @@
 
     <div class="banner has-dots">
         <ul>
+            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;">
+                <div class="inner">
+                    <h1>Google StudyJams</h1>
+                    <p style="color: darkgray">Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。</p>
+                    <a class="btn" href="http://www.studyjamscn.com/" onclick="trackOutboundLink('http://www.studyjamscn.com/', 'StudyJams', 'click');" title="Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书">去瞅瞅</a>
+                </div>
+            </li>
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
                     <p>汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。</p>
-                    <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="">去订阅</a>
+                    <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
-                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="">去看看</a>
+                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去看看</a>
                 </div>
             </li>
             <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Code Labs</h1>
                     <p>各种 Google 技术的 Code Labs</p>
-                    <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="">去试试</a>
+                    <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="各种 Google 技术的 Code Labs">去试试</a>
                 </div>
             </li>
             <li style="background-image: url(http://ww3.sinaimg.cn/large/006tKfTcgy1fcnsyt9wogj31jk0go409.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Android 7.0 Nougat</h1>
                     <p>Android 牛轧糖</p>
-                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android', 'click');" title="">去尝尝</a>
+                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android', 'click');" title="Android 牛轧糖">去尝尝</a>
                 </div>
             </li>
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb53o2nj31jk0gojto.jpg); width: 25%;">
                 <div class="inner">
-                    <h1 style="color: #9acd0;">Android Studio</h1>
+                    <h1>Android Studio</h1>
                     <p>官方下载 Android Studio</p>
-                    <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="">下载</a>
+                    <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="官方下载 Android Studio">去下载</a>
                 </div>
             </li>
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Google Developers</h1>
                     <p>官方 Google 开发者网站</p>
-                    <a class="btn" href='https://developers.google.cn' onclick="trackOutboundLink('https://developers.google.cn', 'Google Developers', 'click');" title="">去瞅瞅</a>
+                    <a class="btn" href='https://developers.google.cn' onclick="trackOutboundLink('https://developers.google.cn', 'Google Developers', 'click');" title="官方 Google 开发者网站">去瞅瞅</a>
                 </div>
             </li>
         </ul>
