Add Android Studio Preview6 link

--- a/index.html
+++ b/index.html
@@ -315,6 +315,43 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.4 Preview6-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3909050-windows.zip">android-studio-ide-171.3909050-windows.zip</a>
+                                </td>
+                                <td>541.28 MB</td>
+                                <td>4ba92bf19ef5555ef09095046e43007a01b7acd9662e7602dccde7f75d339992</td>
+                                <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/006tKfTcgy1fei1gtmjumj31at0gi0vv.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3909050-windows32.zip">android-studio-ide-171.3909050-windows32.zip</a>
+                                </td>
+                                <td>540.77 MB</td>
+                                <td>a2bd97a0787eb0169749cf48f9c5fa4da5f8f477b669bcdd5399a32cf973d2a9</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3909050-mac.zip">android-studio-ide-171.3909050-mac.dmg</a>
+                                </td>
+                                <td>540.34 MB</td>
+                                <td>7ee2d3daf79489dff15cf70dcec72b85d75c602261851396112b9b6e9385bd15</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3909050-linux.zip">android-studio-ide-171.3909050-linux.zip</a>
+                                </td>
+                                <td>539.80 MB</td>
+                                <td>b856e76425731e4936f2fcc1525495eea30d0c0cd1458c6c035fb92ee68a337e</td>
+                            </tr>
                             <!-- 2.4 Preview5-->
                             <tr>
                                 <td rowspan="5">2.4 Preview5</td>
