Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1668,8 +1668,8 @@
                                 <td>¥5</td>
                                 <td>逝水流星-MisGray</td>
                                 <td>¥6.66</td>
-                                <td></td>
-                                <td></td>
+                                <td>剑煮文</td>
+                                <td>¥18.8</td>
                             </tr>
                         </tbody>
                     </table>
