modify qiniu ad click url

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="http://t.cn/R606xSY" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://t.cn/R606xSY', 'AD-QiNiuStorage', 'click');" target="_blank">
+        <a href="http://t.cn/R606VhM" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://t.cn/R606VhM', 'AD-QiNiuStorage-2', 'click');" target="_blank">
             <img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fe61asp4n4j304705l74b.jpg">
         </a>
     </div>
