Add Android Studio Preview7 link

--- a/index.html
+++ b/index.html
@@ -319,6 +319,43 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.4 Preview7-->
+                            <tr>
+                                <td rowspan="5">2.4 Preview7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.6/android-studio-ide-171.3934896-windows.zip">android-studio-ide-171.3934896-windows.zip</a>
+                                </td>
+                                <td>542.96 MB</td>
+                                <td>b87180c4fcb7dc224d182f75c46f7457ce83da2a8b31dd824fceacd6fc94fdc5</td>
+                                <td rowspan="5"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.6/android-studio-ide-171.3934896-windows32.zip">android-studio-ide-171.3934896-windows32.zip</a>
+                                </td>
+                                <td>542.45 MB</td>
+                                <td>8d56bcc3ce0add9622582dbba8cceb18f015b4e74156bd17af86742a396bffba</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.6/android-studio-ide-171.3934896-mac.zip">android-studio-ide-171.3934896-mac.dmg</a>
+                                </td>
+                                <td>542.03 MB</td>
+                                <td>66d82f8aaa8124a9420f15faf22e58f573961e0f2314bb40bfe51867772810c9</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.6/android-studio-ide-171.3934896-linux.zip">android-studio-ide-171.3934896-linux.zip</a>
+                                </td>
+                                <td>541.39 MB</td>
+                                <td>40c0ff79790d2ed51eb21afb204cd6830b55d1a8182de981c4a08300f566b7e8</td>
+                            </tr>
                             <!-- 2.4 Preview6-->
                             <tr>
                                 <td rowspan="5">2.4 Preview6</td>
@@ -326,7 +363,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3909050-windows.zip">android-studio-ide-171.3909050-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.5/android-studio-ide-171.3934896-windows.zip">android-studio-ide-171.3909050-windows.zip</a>
                                 </td>
                                 <td>541.28 MB</td>
                                 <td>4ba92bf19ef5555ef09095046e43007a01b7acd9662e7602dccde7f75d339992</td>
