Add Android Studio Preview7 SHA code image link

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 </td>
                                 <td>542.96 MB</td>
                                 <td>b87180c4fcb7dc224d182f75c46f7457ce83da2a8b31dd824fceacd6fc94fdc5</td>
-                                <td rowspan="5"><a href="">查看</a></td>
+                                <td rowspan="5"><a href="http://ww1.sinaimg.cn/large/006tKfTcly1ff81vliyg8j31kw0l07bn.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.4.0.6/android-studio-ide-171.3934896-windows32.zip">android-studio-ide-171.3934896-windows32.zip</a>
