Add Android Studio Preview 3.0 link

--- a/index.html
+++ b/index.html
@@ -319,6 +319,43 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.0/android-studio-ide-171.4010489-windows.zip">android-studio-ide-171.4010489-windows.zip</a>
+                                </td>
+                                <td>702075896 bytes</td>
+                                <td>b1f983c68b7c1f9a7442b132b774fe01489acfd6cd4d0a72a07cbef441682727</td>
+                                <td rowspan="5"><a href="http://ww3.sinaimg.cn/large/006tNc79ly1ffphcv51vej30x50iq41r.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.0/android-studio-ide-171.4010489-windows32.zip">android-studio-ide-171.4010489-windows32.zip</a>
+                                </td>
+                                <td>701541040 bytes</td>
+                                <td>5d7101353eee3d0bc201be01afca6e40d2643bb3ae5e99ec94e0cc0400698de0</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.0/android-studio-ide-171.4010489-mac.zip">android-studio-ide-171.4010489-mac.dmg</a>
+                                </td>
+                                <td>701134644 bytes</td>
+                                <td>863849c56ea4ac1d788e8a5c30cb7bf88b80f552fcc72c4cef24c016e148a3b8</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.0/android-studio-ide-171.4010489-linux.zip">android-studio-ide-171.4010489-linux.zip</a>
+                                </td>
+                                <td>700534332 bytes</td>
+                                <td>7eeade7638b8a2d2715539e27e521a75be274e5b690b1a90e69e938f42a75988</td>
+                            </tr>
                             <!-- 2.4 Preview7-->
                             <tr>
                                 <td rowspan="5">2.4 Preview7</td>
@@ -404,7 +441,7 @@
                                 </td>
                                 <td>1.85 GB</td>
                                 <td>9d787c0cf453e40ad1b0621f0e5a9653270dcc22a58fa7c9fab2223531c83a41</td>
-                                <td rowspan="5"><a href="">查看</a></td>
+                                <td rowspan="5"><a href="http://ww3.sinaimg.cn/large/006tNc79ly1ffpg7j3hmcj31890i6gpn.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td align="left"><a href="https://developer.android.google.cn/studio/archive.html#android-studio-2-3-2">android-studio-ide-162.3934792-windows32.zip</a>
@@ -441,7 +478,7 @@
                                 </td>
                                 <td>1.87 GB</td>
                                 <td>8cfa10645b7fe1a89d4c454533763bfa34be830f4c4a5adc42afa363e0492150</td>
-                                <td rowspan="5"><a href="">查看</a></td>
+                                <td rowspan="5"><a href="http://ww4.sinaimg.cn/large/006tNc79ly1ffpg80v62aj31860g3djf.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td align="left"><a href="https://developer.android.google.cn/studio/archive.html#android-studio-2-3-1">android-studio-ide-162.3871768-windows32.zip</a>
