Add new qiniu ad info

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="http://t.cn/Ra5Elqk" title="七牛云 DV & OV & EV SSL 证书上线，限时折扣低至6.75折！" onclick="trackOutboundLink('http://t.cn/Ra5Elqk', 'AD-QiNiuSSL-2', 'click');" target="_blank">
-            <img src="http://ww4.sinaimg.cn/large/006tNbRwly1ffe42d4w67j304605kwei.jpg">
+        <a href="https://0x7.me/UIKc" title="七牛云六月大派送，周边玩偶、神秘大礼、500 抵用券等你来拿！" onclick="trackOutboundLink('https://0x7.me/UIKc', 'AD-QiNiuJuneBigGift', 'click');" target="_blank">
+            <img src="http://ws1.sinaimg.cn/large/006tNc79ly1fg6z7q93dej304605kglp.jpg">
         </a>
     </div>
 
